--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ body {
 }
 
 .songWords{
-  width:55%;
+  width:40%;
 
 }
 .songWords > h1{
@@ -429,15 +429,17 @@ animation:pulse 1700ms infinite;
   position: fixed; 
   top: 0;
   left: 3.5vw;
-  width: 30%;
+  width: 92%;
   height:95vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-end;
   z-index: 1011111100000; 
   opacity: 0;
   transition: opacity .2s ease;
+  pointer-events: all;
+  margin:0 auto;
 
 }
 /* 
@@ -450,7 +452,15 @@ animation:pulse 1700ms infinite;
 .main-title {
   margin-bottom:1vh;
   color:white;
+  width: 50%;
 
+}
+.control{
+  font-size:1em;
+  color:rgba(255, 255, 255, 0.532);
+  outline:1px solid rgba(255, 255, 255, 0.438);
+  padding:1em;
+  border-radius: 8px;
 }
 
 .wordss{
@@ -624,8 +634,7 @@ color:white;
  }
   .video-container {
     position: fixed;
-    box-shadow: 0 0 8px 8px white inset;
-
+background-color: black;
     width: 100vw;
     height: 100vh;
     right: 0;
@@ -806,3 +815,23 @@ opacity: 0;
   border-color: transparent transparent transparent #404040;
 }
 
+    /* width: 38px;
+    height: 64px;
+    vertical-align: middle;
+    display: inline-block;
+    position: relative;
+    transform: translateX(0);
+    transition: transform 0.5s cubic-bezier(0.5, 0, 0.2, 1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden; */
+.bottom-left{
+    color:white;
+width:25%;
+  position: absolute;
+  bottom: 1vw;
+  left: 3vw;
+  opacity:0
+}
+.bottom-show{
+  opacity:1;
+}
