--- a/src/App.css
+++ b/src/App.css
@@ -95,13 +95,18 @@ body {
   align-items: flex-start;
 }
 .progressNav{
+  position: absolute; 
+  bottom: 3.4em;
+  /* right: 0; */
   font-size: .95em;
+  width:88%;
+  height:10%;
   margin:auto;
-  width:90%;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 .prev{
   font-size: .95em;
@@ -109,7 +114,7 @@ body {
 }
 .detail {
   width: 90%;
-  height:65%;
+  /* height:65%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
