--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,6 @@ padding:2em 0;
 }
 .exit{
   width: 96%;
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -216,7 +215,7 @@ padding:2em 0;
 .modal-form{
 	position: relative;
 }
-.close-btn{
+/* .close-btn{
   color:black;
 	position: absolute;
 	transition: transform .25s, opacity .25s;
@@ -232,7 +231,7 @@ padding:2em 0;
 .close-btn:hover{
 	opacity: 1;
 	transform: rotate(90deg);
-}
+} */
 .one{
   position: fixed;
   right: 0;
@@ -488,39 +487,6 @@ animation:pulse 1700ms infinite;
 }
 
 
-
-.dropbtn {
-  font-size: 1.1rem;
-  position: fixed;
-  right: 3rem;
-  top: 3rem;
-  width: 2.9rem;
-  height: 2.9rem;
-  border-radius: 50%;
-  box-shadow: 0 0 23px rgb(255, 255, 255);
-  color: #f3f3f3;
-  border: none;
-  cursor: pointer;
-  z-index: 1000;
-  transition: all .2s;
-  background-color: rgba(255, 248, 248, 0);
-  outline: 1px solid white;
-  z-index: 1011111100000;
-
-}
-.dropbtn:focus {
-  outline: none;
-}
-
-.dropbtn:hover {
-  width: 3.4rem;
-  height: 3.4rem;
-}
-.dark {
-  color: rgb(22, 22, 22);
-  box-shadow: 0 0 10px rgb(22, 22, 22);
-  /* background-color: rgb(22, 22, 22); */
-}
 a {
   color: rgb(22, 22, 22);
   border-bottom: solid;
@@ -840,3 +806,127 @@ width:25%;
 .bottom-show{
   opacity:1;
 }
+
+
+.nav-icon1 {
+  width: 42px;
+  height: 38px;
+  position: fixed;
+  right: 3rem;
+  top: 1rem; 
+   margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  z-index: 1011111100000;
+
+}
+ .small{
+  width: 35px;
+  height: 35px;
+}
+.nav-icon1 span{
+  display: block;
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background: #ffffff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+.nav-icon1 span:nth-child(2) {
+  top: 18px;
+}
+
+.nav-icon1.open span:nth-child(1) {
+  top: 18px;
+  background: #000000;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+
+.nav-icon1.open span:nth-child(2) {
+  top: 18px;
+  background: #000000;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+/* .prev::before {
+  content: " ";
+  border-left: 1px solid #000;
+  border-bottom: 1px solid #000;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  display: block;
+}
+
+.next::before {
+  content: " ";
+  border-right: 1px solid #000;
+  border-top: 1px solid #000;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  display: block;
+} */
+
+/* .dropbtn {
+  font-size: 1.1rem;
+  position: fixed;
+  right: 3rem;
+  top: 3rem;
+  width: 2.9rem;
+  height: 2.9rem;
+  border-radius: 50%;
+  box-shadow: 0 0 23px rgb(255, 255, 255);
+  color: #f3f3f3;
+  border: none;
+  cursor: pointer;
+  z-index: 1000;
+  transition: all .2s;
+  background-color: rgba(255, 248, 248, 0);
+  outline: 1px solid white;
+  z-index: 1011111100000;
+
+}
+.dropbtn:focus {
+  outline: none;
+}
+
+.dropbtn:hover {
+  width: 3.4rem;
+  height: 3.4rem;
+}
+.dark {
+  color: rgb(22, 22, 22);
+  box-shadow: 0 0 10px rgb(22, 22, 22);
+} */
