--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,11 @@ body {
   font-variant-numeric: tabular-nums;
   -webkit-font-smoothing: auto;
 } */
-
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
 .wrapper{
  position: relative; 
  width: 100%;
@@ -182,7 +186,12 @@ body {
 }
 
 .enterB{
-  font-size:.95em;
+  font-size:1em;
+
+padding:2em 0;
+}
+.enterA{
+  font-size:1.1em;
 
 padding:2em 0;
 }
@@ -259,11 +268,7 @@ padding:2em 0;
 
 
 
-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
+
 
 .audio-player {
   width:100%;
@@ -365,10 +370,20 @@ animation:pulse 1700ms infinite;
   font-family:Poppins;
   background: linear-gradient(0deg, rgb(10, 9, 16), rgb(10, 10, 12)) no-repeat right bottom / 0 var(--bg-h);
   transition: background-size 350ms;
+
   --bg-h: 100%;
+  background-size: 100% var(--bg-h);
+
+}
+.white-a {
+  background: linear-gradient(0deg, rgb(255, 255, 255), rgb(255, 255, 255)) no-repeat right bottom / 0 var(--bg-h);
+  transition: background-size 350ms;
+
+  --bg-h: 100%;
+  background-size: 100% var(--bg-h);
 }
 .a:where(:hover, :focus-visible) {
-  background-size: 100% var(--bg-h);
+  background-size: 0% var(--bg-h);
   background-position-x: left;
 }
 
@@ -433,8 +448,8 @@ animation:pulse 1700ms infinite;
   position: fixed; 
   top: 0;
   left: 3.5vw;
-  width: 92%;
-  height:95vh;
+  width: 95%;
+  height:100vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -446,25 +461,48 @@ animation:pulse 1700ms infinite;
   margin:0 auto;
 
 }
-/* 
+
 .main-titles{
-    width: 32%;
+  width: 45%;
+  margin-bottom: 14vh;
   
   
 
-} */
+}
 .main-title {
   margin-bottom:1vh;
-  color:white;
+  color:rgba(255, 255, 255, 0.733);
+
+  width: 70%;
+
+}
+
+.video-help{
   width: 50%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* align-items: flex-end; */
+}
+.scroll-help{
+  padding-top: 2vh;
+  height:30%;
+  padding-bottom: 0vh;
+  font-size:.9em;
+  width: 50%;
+  color:rgba(255, 255, 255, 0.532);
 
 }
 .control{
-  font-size:1em;
-  color:rgba(255, 255, 255, 0.532);
-  outline:1px solid rgba(255, 255, 255, 0.438);
+  /* margin-bottom: .9vh; */
+  height:4em;
+  font-size:.9em;
+  color:rgba(255, 255, 255, 0.401);
+  outline:1px dotted rgba(255, 255, 255, 0.336);
   padding:1em;
-  border-radius: 8px;
+
+  /* border-radius: 5px; */
 }
 
 .wordss{
@@ -481,7 +519,7 @@ animation:pulse 1700ms infinite;
   height: 100vh;
   width: 0vw;
   overflow: auto;
-  background-color: rgba(192, 225, 230, 0.812);
+  background-color: rgba(192, 225, 230, 0.866);
   /* z-index: 100000; */
   transition: width .2s ease;
 }
@@ -655,6 +693,7 @@ opacity: 0;
   justify-content: space-between;
   align-items: flex-end;
 }
+
 /* .video-titles>h1{
   height:10%;
 
@@ -724,10 +763,7 @@ opacity: 0;
     }
   }
    */
-   .main-title{
-  color:white;
 
-}
 .pause{
   display: flex;
     justify-content: center;
