--- a/src/App.css
+++ b/src/App.css
@@ -525,6 +525,35 @@ width:9em;
   align-items: flex-start;
   margin:auto;
 }
+
+.nav-section{
+  position: absolute; 
+  bottom: 7vw;
+  right: 5vw;
+  width: 20%;
+  height:20%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  z-index: 1011111100000;
+
+}
+.dropdown-content1 {
+  outline: 0px solid rgba(255, 255, 255, 0.842);
+
+  height: 9vh;
+  width: 0vw;
+  overflow: auto;
+  border-radius: 8px;
+  /* background-color: rgba(192, 225, 230, 0.866); */
+  /* z-index: 100000; */
+  transition: width .2s ease;
+  transition: outline .2s ease;
+
+}
+
 .dropdown-content {
   
   height: 100vh;
@@ -534,7 +563,16 @@ width:9em;
   /* z-index: 100000; */
   transition: width .2s ease;
 }
+.helps{
+  width:90%;
+  color: rgba(255, 255, 255, 0.842);
+  margin:auto;
+}
+.show1{
+  width:20vw;
+  outline: 1px solid white;
 
+}
 
 a {
   color: rgb(22, 22, 22);
@@ -848,10 +886,8 @@ width:25%;
   position: absolute;
   bottom: 1vw;
   left: 3vw;
-  opacity:0
-}
-.bottom-show{
-  opacity:1;
+  opacity:0;
+
 }
 
 
@@ -977,3 +1013,38 @@ width:25%;
   color: rgb(22, 22, 22);
   box-shadow: 0 0 10px rgb(22, 22, 22);
 } */
+.bottom-right{
+  /* position: absolute; 
+  bottom: 6vw;
+  right: 6vw;
+  width: 100%;
+  height:100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  z-index: 1011111100000; */
+  position: absolute;
+  bottom: 4.5vw;
+  right: 5vw;
+  font-weight: 400;
+  line-height: 1em;
+  letter-spacing: -0.01em;
+  font-size: 12px;
+  text-align: right;
+  opacity:0;
+  z-index: 1011111100000;
+
+}
+.bottom-show{
+  opacity:1;
+}
+
+.helpbutton{
+  color: white;
+  z-index: 101111110000000;
+  font-size:1.5em;
+
+
+}
